<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logoqi"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/qilogo"
        android:contentDescription="@string/looo_qi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/entertext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/enter"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/loginEditTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoqi"
        app:layout_constraintVertical_bias="0.771" />

    <Button
        android:id="@+id/ButtonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/ButtonForgotPassword"
        app:layout_constraintEnd_toStartOf="@+id/ButtonRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEditTextPassword"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/loginEditTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="348dp"
        android:autofillHints="none"
        android:ems="15"
        android:hint="@string/put_your_email"
        android:inputType="none"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/ButtonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@+id/ButtonForgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEditTextPassword"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/ButtonForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:ems="21"
        android:text="@string/forgot_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/loginEditTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:layout_marginTop="20dp"
        android:autofillHints="Password"
        android:ems="15"
        android:hint="@string/put_your_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEditTextEmail"
        tools:ignore="TextFields" />

</androidx.constraintlayout.widget.ConstraintLayout>